--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                     <!--==================== SERVICES 1 ====================-->
                     <div class="services__content">
                         <div>
-                            <i class="uil uil-web-grid"></i>
+                            <i class="uil uil-web-grid services__icon"></i>
                             <h3 class="services__title">Ui/Ux <br> Designer</h3>
                         </div>
 
@@ -481,30 +481,32 @@
                             <i class="uil uil-arrow-right button__icon"></i>
                         </span>
 
+                    <div class="services__modal">
                         <div class="services__modal-content">
                             <h4 class="services__modal-title">Ui/Ux <br> Designer</h4>
                             <i class="uil uil-times services__modal-close"></i>
 
                             <ul class="services__modal-services grid">
-                                <li class="services__modal-services">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>I develop the user interface.</p>
                                 </li>
-                                <li class="services__modal-services">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>Web page development.</p>
                                 </li>
-                                <li class="services__modal-services">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>I create ux element interactions.</p>
                                 </li>
-                                <li class="services__modal-services">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>I position your company brand.</p>
                                 </li>
                             </ul>
                         </div>
                     </div>
+                </div>
 
                     <!--==================== SERVICES 2 ====================-->
                     <div class="services__content">
@@ -518,28 +520,30 @@
                             <i class="uil uil-arrow-right button__icon"></i>
                         </span>
 
+                    <div class="services__modal">
                         <div class="services__modal-content">
                             <h4 class="services__modal-title">Frontend <br> Developer</h4>
                             <i class="uil uil-times services__modal-close"></i>
 
                             <ul class="services__modal-services grid">
-                                <li class="services__modal-services">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>I develop the user interface.</p>
                                 </li>
-                                <li class="services__modal-services">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>Web page development.</p>
                                 </li>
-                                <li class="services__modal-services">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>I create ux element interactions.</p>
                                 </li>
-                                <li class="services__modal-services">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>I position your company brand.</p>
                                 </li>
                             </ul>
+                        </div>
                         </div>
                     </div>
 
@@ -555,28 +559,30 @@
                             <i class="uil uil-arrow-right button__icon"></i>
                         </span>
 
+                        <div class="services__modal">
                         <div class="services__modal-content">
                             <h4 class="services__modal-title">Branding <br> Designer</h4>
                             <i class="uil uil-times services__modal-close"></i>
 
                             <ul class="services__modal-services grid">
-                                <li class="services__modal-services">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>I develop the user interface.</p>
                                 </li>
-                                <li class="services__modal-services">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>Web page development.</p>
                                 </li>
-                                <li class="services__modal-services">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>I create ux element interactions.</p>
                                 </li>
-                                <li class="services__modal-services">
+                                <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>I position your company brand.</p>
                                 </li>
                             </ul>
+                        </div>
                         </div>
                     </div>
                 </div>
