add dot to image source

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <h2 class="section__title">About Me</h2>
                 <span class="section__subtitle">My introduction</span>
                 <div class="about__container container grid">
-                    <img src="/assets/img/about.jpg" alt="about" class="about__img">
+                    <img src="./assets/img/about.jpg" alt="about" class="about__img">
                     <div class="about__data">
                         <p class="about__description">
                             Web developer, with extensive knowledge and years of experience, working in web technologies and Ui / Ux design, delivering quality work.
