fix bugs & improvements

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./assets/img/favicon.png" type="image/png">
 
     <!--==================== UNICONS ====================-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -13,6 +14,7 @@
 
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 
     <title>Responsive Portfolio Website</title>
 </head>
@@ -76,18 +78,21 @@
             <div class="home__container container grid">
                 <div class="home__content grid">
                     <div class="home__social">
-                        <a href="https://www.linkedin.com/" tabindex="_blank" class="home__social-icon">
+                        <a href="https://www.linkedin.com/" aria-label="home__social-icon" target="_blank"
+                            class="home__social-icon">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
-                        <a href="https://dribbble.com/" tabindex="_blank" class="home__social-icon">
+                        <a href="https://dribbble.com/" aria-label="home__social-icon" target="_blank"
+                            class="home__social-icon">
                             <i class="uil uil-dribbble"></i>
                         </a>
-                        <a href="https://github.com/" tabindex="_blank" class="home__social-icon">
+                        <a href="https://github.com/" aria-label="home__social-icon" target="_blank"
+                            class="home__social-icon">
                             <i class="uil uil-github-alt"></i>
                         </a>
                     </div>
                     <div class="home__img">
-                        <svg class="home__blob" viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg"
+                        <svg class="home__blob" viewbox="0 0 200 187" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink">
                             <mask id="mask0" mask-type="alpha">
                                 <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
@@ -100,7 +105,7 @@
                                     165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
-                                <image class="home__blob-img" x='12' y='18' href="./assets/img/perfil.png" />
+                                <image class="home__blob-img" x="12" y="18" href="./assets/img/perfil.png" />
                             </g>
                         </svg>
                     </div>
@@ -150,7 +155,7 @@
                         </div>
                     </div>
                     <div class="about__buttons">
-                        <a href="/assets/pdf/Alexa-Cv.pdf" download="" class="button button--flex">
+                        <a href="/assets/pdf/Alexa-Cv.pdf" download class="button button--flex">
                             Download CV<i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -789,7 +794,7 @@
                     </div>
                 </div>
 
-                <form action="" class="contact__form grid">
+                <form class="contact__form grid">
                     <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label for="" class="contact__label">Name</label>
@@ -805,7 +810,7 @@
                         </div>
                         <div class="contact__content">
                             <label for="" class="contact__label">Message</label>
-                            <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                            <textarea name="" cols="0" rows="7" class="contact__input"></textarea>
                         </div>
                         <div>
                             <a href="#" class="button button--flex">
@@ -814,6 +819,7 @@
                             </a>
                         </div>
                     </div>
+                    <button type="submit" style="display:none">Submit</button>
                 </form>
 
             </div>
@@ -840,13 +846,15 @@
                     </li>
                 </ul>
                 <div class="footer__socials">
-                    <a href="https://www.facebook.com/" target="_blank" class="footer__social">
+                    <a href="https://www.facebook.com/" aria-label="footer__social" target="_blank"
+                        class="footer__social">
                         <i class="uil uil-facebook-f"></i>
                     </a>
-                    <a href="https://www.instagram.com/" target="_blank" class="footer__social">
+                    <a href="https://www.instagram.com/" aria-label="footer__social" target="_blank"
+                        class="footer__social">
                         <i class="uil uil-instagram"></i>
                     </a>
-                    <a href="https://twitter.com/" target="_blank" class="footer__social">
+                    <a href="https://twitter.com/" aria-label="footer__social" target="_blank" class="footer__social">
                         <i class="uil uil-twitter-alt"></i>
                     </a>
                 </div>
@@ -856,7 +864,7 @@
     </footer>
 
     <!--==================== SCROLL TOP ====================-->
-    <a href="#" class="scrollup" id="scroll-up">
+    <a href="#" aria-label="scroll-up" class="scrollup" id="scroll-up">
         <i class="uil uil-arrow-up scrollup__icon"></i>
     </a>
 
